# Misinformation-Classification

./: .env.example  .gitignore  Factuality_Evaluator.ipynb  LICENSE  README.md  app.py  example.py  pyproject.toml  requirements.txt  setup.py
archive/nrp/: README.md
data/: article.csv  articles.csv  articles_labeled.csv  articles_labeled_human_scored_v2.csv  generative_human_eval_results.csv  generative_human_eval_table.csv  sentences_labeled.csv
docs/: GITHUB_PAGES.md  PROMPTING_STRATEGIES.md  index.html  script.js  styles.css
scripts/: compute_generative_human_eval.py
src/: __init__.py  app.py  cot_prompt.py  fcot_prompt.py  models.py  run.py
src/scripts/: check_labels.py  train_predictive_models.py
src/tests/: test_article_evaluation.py  test_custom_article.py  test_multi_agent.py  test_pipeline.py
